dark mode fix

--- a/Frontend/src/css/quasar.variables.scss
+++ b/Frontend/src/css/quasar.variables.scss
@@ -36,7 +36,7 @@ $warning: #f2c037;
 body.body--dark {
 	--q-primary: #ee6c4d;
 	--q-secondary: #0a2240;
-	--q-login-form-text: #000;
+	--q-login-form-text: #fff;
 	$accent: #ee6c4d;
 
 	--q-login-form: #000;
